# suscape-devkit

./: .gitignore  README.md  pyproject.toml
src/suscape/data/: box.py  ego_pose.py  lidar_pointcloud.py  radar.py
src/suscape/dataset/: __init__.py  bin_pcd_reader.py  dataset.py  suscape_dataset.py
src/suscape/eval/: __init__.py
src/suscape/eval/detection_2d/: det_eval_2d_util.py  evaluate_2d.py
src/suscape/eval/detection_3d/: __init__.py  accumulate.py  evaluate.py  evaluate_3d.py  get_iou.py  utils.py
src/suscape/eval/segmentation/: eval_seg.py  seg_utils.py
src/suscape/tools/: gen_semantic_png.py
src/suscape/tools/sus3d_to_kitti/: sus2kitti.py
src/suscape/tools/sus3d_to_kitti/kitti_package/: kitti_calibration.py  kitti_util.py
src/suscape/utils/: calibration.py  common_utils.py  draw_gt.py  obj_color.py  parse_pcd.py
tests/: demo.ipynb  demo.py  test_eval3d.py
tests/metric_test/2d/camera/: res_front.json
tests/metric_test/3d/: res.json
